Links added to most clickables, but the dropdown menu does not work and neither does the searchbar and search buttons (which probably inhabit the uncanny valley of webpage design)

--- a/google.html
+++ b/google.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <head>
-    <title>Google</title>
+    <title>Google Webpage Practice</title>
     <link rel="stylesheet" href="google.css">
 </head>
 
 <body>
-<div id="top-flex-container">
-    <div>About</div>
-    <div>Store</div>
-    <div id="deadspace"></div>
-    <div>Gmail</div>
-    <div>Images</div>
-    <div><img src="https://norsemathology.org/wiki/images/2/2c/Dot-grid-3x3.png" width="30px" height="30px"></div>
-    <div id="signbutton"><b>Sign In</b></div>
-</div>
-    
-    <div id="mid-flex-container">
-        <img id="logo"src="https://www.google.com/logos/doodles/2020/memorial-day-2020-united-states-6753651837108732-l.png" alt="Google's Logo">
-        <input id="searchbar" type="text">
-    </div>
-<div id="bottom-flex-container">
+<navbar>
+   <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjWppW4iNDpAhVBOs0KHd00CF0QkNQCCAM&url=https%3A%2F%2Fabout.google%2F%3Ffg%3D1%26utm_source%3Dgoogle-US%26utm_medium%3Dreferral%26utm_campaign%3Dhp-header&usg=AOvVaw13L0SpN0L7ycx9R0_i4R2S" target="_blank"><div>About</div></a>
 
-</div>
+   <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjWppW4iNDpAhVBOs0KHd00CF0QpMwCCAQ&url=https%3A%2F%2Fstore.google.com%2FUS%3Futm_source%3Dhp_header%26utm_medium%3Dgoogle_ooo%26utm_campaign%3DGS100042%26hl%3Den-US&usg=AOvVaw0wvkRBURf91YdMQCXOelDf" target="_blank"> <div>Store</div></a>
+
+   <div class="deadspace"></div>
+
+   <a href="https://mail.google.com/mail/?tab=wm&ogbl" target="_blank"> <div>Gmail</div></a>
+
+   <a href="https://mail.google.com/mail/?tab=wm&ogbl" target="_blank"><div>Images</div></a>
+
+   <div><img src="https://norsemathology.org/wiki/images/2/2c/Dot-grid-3x3.png" width="30px" height="30px"></div>
+
+    <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/" target="_blank"><div id="signbutton"><b>Sign In</b></div></a>
+</navbar>
+    <div id="mid-flex-container">
+        <a id="logo" href="https://www.google.com/" target="_blank"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google's Logo"></a>
+            <input id="searchbar" type="text" placeholder="&#128270">
+            <div id="buttonholder">
+            <input type="button"  class="sbutton" value="Search">
+            <input type="button" style="width: 150px" class="sbutton" value="I'm Feeling Lucky">
+        </div>
+    </div>
+<footer>
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjO1L3njdXpAhUGWs0KHeMFDPsQkdQCCBU&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fen_us%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw3XLzhicA5ZZW0afDbW0l2T" target="_blank"> <div>Advertising</div></a>
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjO1L3njdXpAhUGWs0KHeMFDPsQktQCCBY&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K" target="_blank"><div>Business</div></a>
+    <a href="https://google.com/search/howsearchworks/?fg=1" target="_blank"><div>How Search works</div></a>
+   <div class="deadspace" style="width: 50vw"></div>
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjO1L3njdXpAhUGWs0KHeMFDPsQ8awCCBE&url=https%3A%2F%2Fpolicies.google.com%2Fprivacy%3Ffg%3D1&usg=AOvVaw12z8DS9cd-g0Aokit_wxri" target="_blank"><div>Privacy</div></a>
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjO1L3njdXpAhUGWs0KHeMFDPsQ8qwCCBI&url=https%3A%2F%2Fpolicies.google.com%2Fterms%3Ffg%3D1&usg=AOvVaw3sEM_N0elgYQx8WbCXpj3n" target="_blank"><div>Terms</div></a>
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjO1L3njdXpAhUGWs0KHeMFDPsQzq0CCBM&url=https%3A%2F%2Fwww.google.com%2Fpreferences%3Fhl%3Den&usg=AOvVaw0XvhSqpc_GFt9aG_mRLp1F" target="_blank"><div>Settings</div></a>
+</footer>
 </body>
 
 </html>
